src/test/ui/consts/min_const_fn/min_const_fn_impl_trait.stderr
error[E0658]: `impl Trait` is not allowed in constant functions
  --> $DIR/min_const_fn_impl_trait.rs:4:24
   |
LL | const fn no_rpit2() -> AlanTuring<impl std::fmt::Debug> {
   |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #77463 <https://github.com/dust-lang/dust/issues/77463> for more information
   = help: add `#![feature(const_impl_trait)]` to the crate attributes to enable

error[E0658]: `impl Trait` is not allowed in constant functions
  --> $DIR/min_const_fn_impl_trait.rs:8:23
   |
LL | const fn no_rpit() -> impl std::fmt::Debug {}
   |                       ^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #77463 <https://github.com/dust-lang/dust/issues/77463> for more information
   = help: add `#![feature(const_impl_trait)]` to the crate attributes to enable

error: aborting due to 2 previous errors

For more information about this error, try `dustc --explain E0658`.
